--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
     #sec-card input[type="file"]{background:#fff;padding:10px;border-radius:6px;border:1px solid #ccc;}
     #sec-card .two{display:flex;flex-direction:column;gap:12px;}
     @media (min-width:720px){#sec-card .two{flex-direction:row;}}
+    /* ショップカード：カラー選択 */
+.color-samples{
+  display:grid;
+  grid-template-columns:repeat(auto-fit, minmax(80px, 1fr));
+  gap:8px;
+}
+.color-box{
+  background: var(--c);
+  padding:12px 0;
+  text-align:center;
+  border-radius:8px;
+  color:#fff;
+  font-weight:600;
+  font-size:13px;
+  border:1px solid rgba(0,0,0,.1);
+  cursor:pointer;
+  user-select:none;
+}
+.color-box span{ font-size:11px; display:block; opacity:.8; }
+.color-box.selected{ outline:2px solid var(--accent); outline-offset:2px; }
   </style>
 </head>
 <body>
