--- a/index.html
+++ b/index.html
@@ -282,9 +282,14 @@
           <input id="scColor" type="hidden" value="#5a5aff">
           <div class="color-samples" id="colorSamples">
             <div class="color-box" data-color="#ff3b30" style="--c:#ff3b30">RED<br><span>#ff3b30</span></div>
+            <div class="color-box" data-color="#ff6b00" style="--c:#ff6b00">ORANGE<br><span>#ff6b00</span></div>
+            <div class="color-box" data-color="#ffa500" style="--c:#ffa500">YELLOW<br><span>#ffa500</span></div>
             <div class="color-box" data-color="#34c759" style="--c:#34c759">GREEN<br><span>#34c759</span></div>
             <div class="color-box" data-color="#5a5aff" style="--c:#5a5aff">BLUE<br><span>#5a5aff</span></div>
             <div class="color-box" data-color="#6a0dad" style="--c:#6a0dad">PURPLE<br><span>#6a0dad</span></div>
+            <div class="color-box" data-color="#ff2d55" style="--c:#ff2d55">PINK<br><span>#ff2d55</span></div>
+            <div class="color-box" data-color="#5c4033" style="--c:#5c4033">BROWN<br><span>#5c4033</span></div>
+            <div class="color-box" data-color="#808080" style="--c:#808080">GRAY<br><span>#808080</span></div>
             <div class="color-box" data-color="#000000" style="--c:#000000">BLACK<br><span>#000000</span></div>
             <div class="color-box" data-color="#ffffff" style="--c:#ffffff;color:#000">WHITE<br><span>#ffffff</span></div>
           </div>
