--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
   </div>
 
   <script>
-    const GAS_URL = "https://script.google.com/macros/s/AKfycbxOlQz9GOB0Qp10iXGIsdJ7nOli_RQxwheMctVctluaF947cS4zDm99hZ6Dqkzysao/exec";
+    const GAS_URL = "https://super-term-2b6b.y-kimura11223.workers.dev/";
     const $ = s => document.querySelector(s);
     const on = (el, evt, fn) => el && el.addEventListener(evt, fn);
     const show = (el, v = true) => el.style.display = v ? '' : 'none';
