--- a/index.html
+++ b/index.html
@@ -620,13 +620,18 @@
         <div class="field">
           <label>テーマカラー<span class="req">*</span></label>
           <input id="scColor" type="hidden" value="#5a5aff">
-          <div class="color-samples" id="colorSamples">
-            <div class="color-box" data-color="#ff3b30" style="--c:#ff3b30">RED<br><span>#ff3b30</span></div>
-            <div class="color-box" data-color="#34c759" style="--c:#34c759">GREEN<br><span>#34c759</span></div>
-            <div class="color-box" data-color="#5a5aff" style="--c:#5a5aff">BLUE<br><span>#5a5aff</span></div>
-            <div class="color-box" data-color="#6a0dad" style="--c:#6a0dad">PURPLE<br><span>#6a0dad</span></div>
-            <div class="color-box" data-color="#000000" style="--c:#000000">BLACK<br><span>#000000</span></div>
-            <div class="color-box" data-color="#ffffff" style="--c:#ffffff;color:#000">WHITE<br><span>#ffffff</span>
+            <div class="color-samples" id="colorSamples">
+              <div class="color-box" data-color="#ff3b30" style="--c:#ff3b30">RED<br><span>#ff3b30</span></div>
+              <div class="color-box" data-color="#ff9500" style="--c:#ff9500">ORANGE<br><span>#ff9500</span></div>
+              <div class="color-box" data-color="#ffcc00" style="--c:#ffcc00">YELLOW<br><span>#ffcc00</span></div>
+              <div class="color-box" data-color="#34c759" style="--c:#34c759">GREEN<br><span>#34c759</span></div>
+              <div class="color-box" data-color="#5a5aff" style="--c:#5a5aff">BLUE<br><span>#5a5aff</span></div>
+              <div class="color-box" data-color="#af52de" style="--c:#af52de">PURPLE<br><span>#af52de</span></div>
+              <div class="color-box" data-color="#ff2d55" style="--c:#ff2d55">PINK<br><span>#ff2d55</span></div>
+              <div class="color-box" data-color="#6b4a3b" style="--c:#6b4a3b">BROWN<br><span>#6b4a3b</span></div>
+              <div class="color-box" data-color="#8e8e93" style="--c:#8e8e93">GRAY<br><span>#8e8e93</span></div>
+              <div class="color-box" data-color="#000000" style="--c:#000000">BLACK<br><span>#000000</span></div>
+              <div class="color-box" data-color="#ffffff" style="--c:#ffffff; color:#333;">WHITE<br><span>#ffffff</span></div>
             </div>
           </div>
           <div class="mini">クリックで選択</div>
