Update label text in rich menu section

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <div id="sec-richmenu" class="section" style="display:none">
       <h3>③ リッチメニュー</h3>
       <div class="field" style="margin-bottom:12px">
-        <label>リッチメニューの配置図（タップ/クリックで該当ボタンへジャンプ）</label>
+        <label>リッチメニューの配置図</label>
         <div class="rm-map" id="rmMapWrap">
           <img id="rmMapImg"
             src="https://www.dropbox.com/scl/fi/ob83wfx3fuy08m1f67vt3/1.jpg?rlkey=72kytf83rd7bhq1l09nds6gc3&st=njv25e3r&dl=1"
