--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
     };
 
     // === LINE連携（LIFF） ===
-    const LIFF_ID = '2006164734-B8ynaQK5';
+    const LIFF_ID = '2008705120-mPLy9LVD';
     let liffReady = false;
     document.addEventListener('DOMContentLoaded', async () => {
       try {
